# Matterix-Orchestrator-Bridge

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  demo-script.md  findings.md  flex-sila-bridge.md  lab-quickstart.md  project-charter.md  sdl1chem-adapter.md  workflow-json-mapping.md
docs/decisions/: 0001-protocol-first.md  0002-monorepo-uv.md  0003-matterix-as-dep.md  0004-pydantic-v2.md  0005-real-stub-vs-real-hardware.md  0006-safety-error-taxonomy.md  0007-arbitrator-modes.md
examples/: 00_hello_mock.py  01_run_sim.py  02_orchestrator_to_sim.py  03_orchestrator_to_real_stub.py  04_safety_demo.py  05_sim_first_then_real.py  06_run_real_matterix.py  07_heat_workflow.py  08_run_real_matterix_heat.py  09_shadow_mode.py  10_batch_analysis.py  11_run_flex_sila.py  flex_dt_config.json  inspect_sdl1chem_adapter.py  inspect_workflow_mapping.py
examples/workflows/: flex_tip_lifecycle.json  matterix_heat_workflow.json  sdl1chem_robot_loop_excerpt.json
scripts/: check_flex_connector_contract.py  check_matterix_env.py
tests/contract/: test_executor_contract.py
tests/integration/: test_flex_example_workflow.py  test_flex_sila_connector.py
tests/unit/: test_arbiter.py  test_flex_adapter.py  test_flex_contract.py  test_flex_contract_checker.py  test_flex_runner.py  test_flex_sila.py  test_heat.py  test_inspect_workflow_mapping.py  test_lowering.py  test_matterix_env_check.py  test_mock_backend.py  test_orchestrator.py  test_real_stub.py  test_result_schema.py  test_safety.py  test_schemas.py  test_shadow_mode.py  (+5 more)
